# moderntensor_polkadot

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_NARRATION_SCRIPT.py  DEMO_RECORDING_SCRIPT.md  LICENSE  MANIFEST.in  MODERNTENSOR_WHITEPAPER_VI.md  README.md  SECURITY.md  WHITEPAPER.md  audit.py  check_balance.py  convert_address.py  demo_polkadot.py  e2e_workflow.py  gen_wallets.py  pyproject.toml  pytest.ini  requirements.txt  transfer_wnd.py  transfer_wnd2.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  python-package.yml
demo/: 01_deploy_setup.py  02_register_keys.py  03_faucet.py  04_register_subnet.py  05_run_miner.py  06_run_validator.py  07_run_demo.py  README.md  __init__.py  config.py  miner.py  run_demo.sh  validator.py  wallets.json
docker/: .dockerignore  Dockerfile  Dockerfile.production  Dockerfile.rust  alertmanager-config.yml  build.sh  docker-compose.production.yml  docker-compose.yml  grafana-datasources.yml  loki-config.yml  nginx.conf  otel-collector-config.yml  prometheus.yml  promtail-config.yml
docs/: HOW_IT_WORKS_VI.md  NON_TECH_OVERVIEW_VI.md  PITCH_DECK.md  README.md  ROADMAP.md  TOKENOMICS.md
docs/api/: README.md  axon.rst  conf.py  dendrite.rst  getting_started.rst  index.rst  metagraph.rst  transactions.rst
docs/architecture/: ARCHITECTURE_DIAGRAMS.md  INTEGRATION_ARCHITECTURE.md  LUXTENSOR_FULL_IMPLEMENTATION.md
docs/business/: LEGAL_STRUCTURE.md  MINER_GUIDE.md  PARTNERSHIP_PROPOSAL.md  VALIDATOR_GUIDE.md
docs/investor/: PITCH_DECK_2026.md
docs/legal/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
docs/marketing/: FAQ.md  ONE_PAGER.md  PRESS_RELEASE.md  SOCIAL_MEDIA_KIT.md
docs/operations/: OPERATIONS_MANUAL.md
docs/reports/: INTEGRATION_VERIFICATION_REPORT.md  SUBTENSOR_FEATURE_PARITY.md
docs/tokenomics/: BURN_MECHANISMS.md  INVESTOR_FAQ.md  STAKING_GUIDE.md  TOKEN_UTILITY.md
luxtensor/contracts/: .env.example  demo-results.json  deployments-local.json  deployments-polkadot.json  deployments.json  hardhat.config.js  package-lock.json  package.json
scripts/: demo_subnet.py  run_miner.py  run_validator.py
sdk/: API_REFERENCE.md  QUICKSTART.md  README.md  __init__.py  errors.py  utils.py  version.py  zkml_scoring.py
sdk/ai_ml/: __init__.py
sdk/axon/: __init__.py  axon.py  config.py  middleware.py  security.py
sdk/cli/: __init__.py  config.py  main.py  ui.py  utils.py  wallet_utils.py
sdk/config/: settings.py
sdk/contracts/: __init__.py
sdk/core/: __init__.py  cache.py  datatypes.py  node_tier.py  scoring.py
sdk/dendrite/: __init__.py  aggregator.py  config.py  dendrite.py  pool.py
sdk/keymanager/: __init__.py  encryption.py  key_generator.py  transaction_signer.py
sdk/models/: __init__.py  miner.py  protocol_miner.py  protocol_validator.py  subnet.py  validator.py
sdk/polkadot/: __init__.py  client.py  config.py  escrow.py  events.py  ipfs_client.py  llm_adapter.py  oracle.py  orchestrator.py  (+5 more)
subnet/: README.md  __init__.py  base.py  config.json  miner1.py  miner2.py  miner_node.py  query_chain.py  run_demo.py  setup_nodes.py  validator1.py  validator2.py  validator3.py  validator_node.py
tests/: conftest.py  test_axon.py  test_axon_standalone.py  test_consensus_security.py  test_dendrite.py  test_e2e_polkadot.py  test_full_workflow.py  test_local_flow.py  test_luxtensor_pallets.py  test_luxtensor_transactions.py  test_polkadot_sdk.py  test_polkadot_testnet.py  test_sdk_edge_cases.py  test_staking_bonus.py  test_tokenomics_month1.py  test_tokenomics_month2.py  verify_onchain.py
(+220 files in other folders)
