[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moderntensor"
version = "0.2.0"
description = "Python SDK for ModernTensor — a decentralized Layer 1 blockchain for AI/ML workloads with PoS consensus, zkML proofs, and native AI precompiles."
readme = "README.md"
license = { text = "MIT" }
license-files = []
authors = [
  { name = "ModernTensor Foundation", email = "sonlearn155@gmail.com" }
]
maintainers = [
  { name = "son", email = "sonlearn155@gmail.com" }
]
keywords = [
  "blockchain", "layer1", "proof-of-stake", "ai-validation",
  "zkml", "cryptocurrency", "decentralized-ai", "machine-learning",
  "luxtensor", "web3"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
  # Core cryptography — Layer 1 blockchain
  "bip_utils>=2.9.3",
  "cryptography>=42.0.0",
  "ecdsa>=0.18.0",
  "coincurve>=19.0.1",
  "pycryptodome>=3.20.0",

  # Web framework & data validation
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",

  # Networking
  "websockets>=13.0",
  "requests>=2.32.0",
  "httpx>=0.28.0",

  # CLI & utilities
  "click>=8.1.0",
  "rich>=13.0.0",
  "loguru>=0.7.0",
  "PyYAML>=6.0",
  "python-dotenv>=1.0.0",
  "colorama>=0.4.6",

  # Dependency injection
  "dependency-injector>=4.45.0",

  # Misc
  "typing_extensions>=4.12.0",
  "annotated-types>=0.7.0",
  "anyio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/sonson0910/moderntensor"
Documentation = "https://github.com/sonson0910/moderntensor/tree/main/docs"
Repository = "https://github.com/sonson0910/moderntensor"
Issues = "https://github.com/sonson0910/moderntensor/issues"
Changelog = "https://github.com/sonson0910/moderntensor/blob/main/CHANGELOG.md"

[project.scripts]
mtcli = "sdk.cli.main:cli"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.4.0",
  "black>=24.0.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
]
monitoring = [
  "prometheus-client>=0.19.0",
  "opentelemetry-api>=1.21.0",
  "opentelemetry-sdk>=1.21.0",
  "opentelemetry-exporter-otlp>=1.21.0",
  "opentelemetry-instrumentation-fastapi>=0.42b0",
]
all = ["moderntensor[dev,docs,monitoring]"]

[tool.hatch.build.targets.wheel]
packages = ["sdk"]

[tool.hatch.build.targets.sdist]
include = [
  "sdk/",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: mark a test as an integration test",
    "ignore:`network` argument will be deprecated in the future.:UserWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["sdk", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
